# charls-tools

./: CMakeLists.txt  LICENSE.md  README.md  TODO  cjpls.cpp  cjpls.cxx  cjpls_options.cpp  cjpls_options.h  crc32.cpp  crc32.h  dest.cpp  dest.h  djpls.cpp  djpls_options.cpp  djpls_options.h  factory.cpp  factory.h  format.cpp  format.h  format.sh  image.cpp  image.h  jls.cpp  jls.h  jplsinfo.cpp  jplsinfo_options.cpp  jplsinfo_options.h  jplstran.cpp  jplstran_options.cpp  jplstran_options.h  options.cpp  options.h  pnm.cpp  pnm.h  raw.cpp  raw.h  source.cpp  source.h  tuple.h  utils.cpp  (+2 more)
doc/: CMakeLists.txt  cjpls.md.in  djpls.md.in  jplsinfo.md.in  jplstran.md.in
tests/: CMakeLists.txt  test_source.cxx
